src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Page</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Funraise Answers</relationshipLabel>
        <relationshipName>Funraise_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration</label>
        <referenceTo>Fundraising_Event_Registration__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Funraise_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supporter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Funraise Answers</relationshipLabel>
        <relationshipName>Funraise_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Funraise Answers</relationshipLabel>
        <relationshipName>Funraise_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fr_Id__c</fullName>
        <externalId>true</externalId>
        <label>Funraise ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Funraise Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Answer__c</columns>
        <columns>Supporter__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Answer-{0000}</displayFormat>
        <label>Funraise Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funraise Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>